kubernetes/applications/frigate/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: frigate
  labels:
    app.kubernetes.io/name: frigate
    app.kubernetes.io/part-of: everlab
