kubernetes/applications/frigate/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: frigate
  namespace: frigate
  labels:
    app.kubernetes.io/name: frigate
    app.kubernetes.io/part-of: everlab
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: everlab-gateway
      namespace: gateway
      sectionName: https

  hostnames:
    - frigate.prod.everlab.dev

  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /

      backendRefs:
        - group: ""
          kind: Service
          name: frigate
          port: 5000
          weight: 1
